--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "csv-parser": "^3.2.0",
     "csv-stringify": "^6.5.2",
     "dns": "^0.2.2",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase-admin": "^13.1.0",
     "firebase-functions": "^6.3.2",
